creazione container principali layout

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <sidebar>
+    <div id="sidebar">
 
-    </sidebar>
+    </div>
     <main>
 
     </main>
-    <bottombar>
-        
-    </bottombar>
+    <div id="bottom_bar">
+
+    </div>
 </body>
 </html>
