bottombar layout concluso

--- a/index.html
+++ b/index.html
@@ -9,13 +9,70 @@
 </head>
 <body>
     <div id="sidebar">
-
+        <div id="logo">
+            <img src="./img/logo.svg" alt="">
+        </div>
+        <div id="side_menu">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#cerca">Cerca</a></li>
+                <li><a href="#la_tua_libreria">La tua libreria</a></li>
+            </ul>
+        </div>
+        <div id="playlist">
+            <ul>
+                <h2>PLAYLIST</h2>
+                <li>Crea Playlist</li>
+                <li>Nome playlist</li>
+                <li>Nome playlist</li>
+                <li>Nome playlist</li>
+                <li>Nome playlist</li>
+                <li>Nome playlist</li>
+                <li>Nome playlist</li>
+                <li>Nome playlist</li>
+            </ul>
+        </div>
+        <div id="profile">
+            <a href="">Installa app</a>
+            <hr>
+            <h3 class="profile_name">Jhon Doe</h3>
+        </div>
     </div>
+
     <main>
 
     </main>
     <div id="bottom_bar">
+        <div class="row space_between">
+            <div class="col_230">
+                <div class="row space_between">
+                    <div class="col_145"></div>
+                    <div class="col_icons"></div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row justify_center">
+                    <div class="col_media"></div>
+                </div>
+                <div class="row">
+                    <div class="col_time">
+                        
+                    </div>
+                    <div class="col_timeline">
 
+                    </div>
+                    <div class="col_time">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col_230">
+                <div class="row space_between">
+                    <div class="col_icons"></div>
+                    <div class="col_145"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
